--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         border-color: black;
         background-color: blanchedalmond;
         height: 500px;
+        width: 500px;
         
     }
     </style>
