--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         font-size: 1em;
         color: #100f11;
         margin-left: 25%;
-        margin-right: 30%;
+        margin-right: 50%;
         margin-top: 6%;
         justify-content: center;
     }
@@ -40,7 +40,7 @@
 
         <label for="file">Arquivo: </label>
         <input type="file" id="file"/><br/><br/>
-
+        <input type= 'text' id= 'comentario'/><br/><br/>
         <textarea id="comentario" rows="3" cols="40">Digiteseuscomentáriosaqui...</textarea><br/><br/>
 
         <input type="radio" name="sex" id="Masculino"/>
