--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <label for="senha">Senha: </label>
         <input type="password" id="senha"/><br/><br/>
 
-        <label for="file">Arquivo: </label>
+        <label for="file">Currículo: </label>
         <input type="file" id="file"/><br/><br/>
 
         <input type="radio" name="sex" id="Masculino"/>
