--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
         <label for="file">Currículo: </label>
         <input type="file" id="file"/><br/><br/>
-
+        
+        <label><strong>Sexo</strong></label><br><br>
         <input type="radio" name="sex" id="Masculino"/>
         <label for="Masculino">Masculino</label><br/>
         <input type="radio" name="sex" id="Feminino"/>
