--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <label for="file">Currículo: </label>
         <input type="file" id="file"/><br/><br/>
         
-        <label><strong>Sexo</strong></label><br><br>
+        <label>Sexo:</label><br/>
         <input type="radio" name="sex" id="Masculino"/>
         <label for="Masculino">Masculino</label><br/>
         <input type="radio" name="sex" id="Feminino"/>
