--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
     </style>
 <div class="container">
-    <form action="mailto:endereço@correio.com" method="post" enctype="text/plain">
+    <form action="mailto:eliza.19.bz@outlook.com" method="post" enctype="text/plain">
 
         <label for="nome">Nome completo: </label>
         <input type="text" id="nome"/><br/><br/>
