--- a/index.html
+++ b/index.html
@@ -11,26 +11,25 @@
         font-family: sans-serif;
         font-size: 1em;
         color: #100f11;
-        margin-left: 36%;
-        margin-right: 30%;
         margin-top: 6%;
         justify-content: center;
+        align-items: center;
+        display: flex;
     }
     .container{
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-top: 10px;
+        padding-top: 20px;
         border: 10px;
         border-color: black;
-        background-color: blanchedalmond;
-        height: 400px;
-        width: 400px;
-        
+        background-color: rgb(199, 130, 26);
+        height: 500px;
+        width: 500px;
     }
     </style>
 <div class="container">
-    <form action="mailto:eliza.19.bz@outlook.com" method="post" enctype="text/plain">
+    <form action="mailto:endereço@correio.com" method="post" enctype="text/plain">
 
         <label for="nome">Nome completo: </label>
         <input type="text" id="nome"/><br/><br/>
@@ -38,10 +37,11 @@
         <label for="senha">Senha: </label>
         <input type="password" id="senha"/><br/><br/>
 
-        <label for="file">Currículo: </label>
+        <label for="file">Arquivo: </label>
         <input type="file" id="file"/><br/><br/>
-        
-        <label>Sexo:</label><br/>
+
+        <textarea id="comentario" rows="3" cols="40">Digiteseuscomentáriosaqui...</textarea><br/><br/>
+
         <input type="radio" name="sex" id="Masculino"/>
         <label for="Masculino">Masculino</label><br/>
         <input type="radio" name="sex" id="Feminino"/>
