--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <textarea id="comentario" rows="3" cols="40">Digiteseuscomentáriosaqui...</textarea><br/><br/>
 
         <input type="radio" name="sex" id="Masculino"/>
-        <label for= 'sex'>Sexo:</label>
+        <label for= 'sex'>Sexo:</label><br/>
         <label for="Masculino">Masculino</label><br/>
         <input type="radio" name="sex" id="Feminino"/>
         <label for="Feminino">Feminino</label><br/><br/>
