--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
         <textarea id="comentario" rows="3" cols="40">Digiteseuscomentáriosaqui...</textarea><br/><br/>
 
+        <label for=”sex”> Sexo: </label>
+        
         <input type="radio" name="sex" id="Masculino"/>
         <label for="Masculino">Masculino</label><br/>
         <input type="radio" name="sex" id="Feminino"/>
