--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <textarea id="comentario" rows="3" cols="40">Digiteseuscomentáriosaqui...</textarea><br/><br/>
 
-        <label for=”sex”> Sexo: </label>
+        <label for=”sex”> Sexo: </label><br/><br/>
         
         <input type="radio" name="sex" id="Masculino"/>
         <label for="Masculino">Masculino</label><br/>
