--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <input type="checkbox" name="areap" value="1" id="areap1"/>
         <label for="areap1">Administração   </label>   
         <input type="checkbox" name="areap" value="2" id="areap2"/>
-        <label for="areap2">Educação</label>
+        <label for="areap2">Psicologia </label>
         <input type="checkbox" name="areap" value="3" id="areap3"/>
-        <label for="areap3">Informática</label><br/><br/>
+        <label for="areap3">Direito </label><br/><br/>
 
         <button name=”submit” type=”submit”>Enviar</button>
 
