--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 <div class="container">
     <form action="mailto:endereço@correio.com" method="post" enctype="text/plain">
 
-        <label for="nome">Nome completo: </label>
+        <label for="nome">Nome: </label>
         <input type="text" id="nome"/><br/><br/>
         
-        <label for="senha">Senha: </label>
-        <input type="password" id="senha"/><br/><br/>
+        <label for="senha">Sobrenome: </label>
+        <input type="text" id="sobrenome"/><br/><br/>
 
         <label for="file">Arquivo: </label>
         <input type="file" id="file"/><br/><br/>
