--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <input type="checkbox" name="areap" value="3" id="areap3"/>
         <label for="areap3">Direito </label><br/><br/>
         
-        <label for=”comentario”> Descreva sua experiência: </label>
+        <label for=”comentario”> Descreva sua experiência: </label><br/><br/>
         <textarea id="comentario" rows="3" cols="40"></textarea><br/><br/>
 
 
