--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <option label="Divorciado" value="D">Divorciado</option>
         </select><br/><br/>
 
-        <label for=”areap”> Curso de Graduação: </label>
+        <label for=”areap”> Curso de Graduação: </label><br/><br/>
         <input type="checkbox" name="areap" value="1" id="areap1"/>
         <label for="areap1">Administração   </label>   
         <input type="checkbox" name="areap" value="2" id="areap2"/>
