--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     </style>
 <div class="container">
-    <form action="mailto:endereço@correio.com" method="post" enctype="text/plain">
+    <form action="mailto:eliza.19.bz@outloook.com" method="post" enctype="text/plain">
 
         <label for="nome">Nome: </label>
         <input type="text" id="nome"/><br/><br/>
