--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
         width: 550px;
     }
     </style>
+</head>
+<body>
 <div class="container">
     <form action="mailto:eliza.19.bz@outloook.com" method="post" enctype="text/plain">
+        
+        <h1>Cadastro Profissional</h1>
 
         <label for="nome">Nome: </label>
         <input type="text" id="nome"/><br/><br/>
